# cnl

./: CONTRIBUTING.md
example/mullers_recurrence/: CMakeLists.txt  README.md  main.cpp
include/cnl/: cmath.h  fraction.h  rounding_integer.h
include/cnl/_impl/: integer.h
include/cnl/_impl/integer/: operators.h  type.h
include/cnl/_impl/type_traits/: is_narrowing.h  make_unsigned.h
include/cnl/auxiliary/: boost.multiprecision.h
include/cnl/bits/: number_base.h
include/cnl/bits/num_traits/: is_composite.h  to_rep.h
include/cnl/bits/type_traits/: is_signed.h
src/test/: CMakeLists.txt  boost.multiprecision.cpp  fraction.cpp
src/test/integer/: type.cpp
src/test/overflow/wide_integer/: type.cpp
src/test/static_integer/: type.cpp
src/test/static_number/: type.cpp
